<resources>
    <string name="app_name">News App</string>
    <string name="api_key">c09a734408ec492ea09eeadca0a78872</string>
    <string name="entertainment">entertainment</string>
    <string name="business">business</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
</resources>